# PHY211_final_project

./: README.md  pyproject.toml  requirements.txt  tutorial (1).ipynb  tutorial.ipynb
src/: main.py
src/tests/: test_main.py
